kotlin/programming-kotlin_code/oop/output/privateaccess.output
privateaccess.kts:14:6: error: cannot access 'yearsOfService': it is private in 'Person'
jane.yearsOfService() //ERROR
     ^
